--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -6,3 +6,8 @@ weixin.appId = wx7d0128b8e445ac1f
 weixin.secret = 69fe95a4b05bc883987f7906d1311d11
 weixin.token = aomi
 weixin.aesKey = eupG5cAshXWUXVjeZmcyXzBUI1zC2NIpFObo8TeWbew
+
+
+mail.host = example.com
+mail.account = account
+mail.password = password
