--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,12 +2,12 @@ mongodb.host = 127.0.0.1
 mongodb.port = 27017
 mongodb.db   = bus
 
-weixin.appId = wx7d0128b8e445ac1f
-weixin.secret = 69fe95a4b05bc883987f7906d1311d11
-weixin.token = aomi
-weixin.aesKey = eupG5cAshXWUXVjeZmcyXzBUI1zC2NIpFObo8TeWbew
+weixin.appId = appid
+weixin.secret = secret
+weixin.token = token
+weixin.aesKey = aeskey
 
 
-mail.host = example.com
+mail.host = mail-host
 mail.account = account
 mail.password = password
