--- a/pom.xml
+++ b/pom.xml
@@ -107,13 +107,26 @@
 			<resource>
 				<directory>src/main/resources</directory>
 				<excludes>
-				  <exclude>sources/**/*</exclude>
+					<exclude>sources/**/*</exclude>
 				</excludes>
 				<filtering>true</filtering>
 			</resource>
 		</resources>
 
 		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<configuration>
+					<nonFilteredFileExtensions>
+						<nonFilteredFileExtension>ttf</nonFilteredFileExtension>
+						<nonFilteredFileExtension>svg</nonFilteredFileExtension>
+						<nonFilteredFileExtension>woff</nonFilteredFileExtension>
+						<nonFilteredFileExtension>woff2</nonFilteredFileExtension>
+					</nonFilteredFileExtensions>
+				</configuration>
+			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
